# RTOS-Workshop

./: CMakeLists.txt  README.md  mutex.c  queue.c  scheduling.c
freertos/include/: FreeRTOSConfig.h
